added less functionality and working watch scripts

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 .header-style {
-  background-color: #163463;
+  background-color: red;
   color: white;
   max-height: 200px;
   padding-top: 10px;
