--- a/css/styles.css
+++ b/css/styles.css
@@ -1,13 +1,62 @@
-.header-style {
-  background-color: red;
-  color: white;
-  max-height: 200px;
-  padding-top: 10px;
-  padding-bottom: 10px;
+
+body{
+    background-color:#2c3e50;
+    color:#ecf0f1;
+    font-family: "Open Sans",sans-serif;
 }
-.no-left-margin {
-  margin-left: 0px;
+
+h1{
+    color:#3498db;
 }
-.somethingnew {
-  margin: 2px;
+.intro2-box{
+    
+    padding:1px;
+    width: 600px;
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
 }
+
+.taglines{
+    line-height: 8px;
+    font-size: 13px;
+}
+
+iframe{
+    margin-top:20px;
+    width: 400px;
+    height: 415px;
+}
+
+button{
+    margin-top:10px;
+    width: 200px;
+    padding:10px;
+    background-color: #27ae60;
+    transition: 1s linear;
+}
+
+button:hover{
+    background-color: #2ecc71;
+}
+
+
+    select {
+        display: block;
+        width: 50%;
+        height: calc(2.25rem + 2px);
+        margin: 2px auto;
+        padding: .375rem 1.75rem .375rem .75rem;
+        line-height: 1.5;
+        color: #495057;
+        vertical-align: middle;
+        background: #fff url(data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' v…0 4 5'%3E%3Cpath fill='%23343a40' d='M2 0L0 2h4zm0 5L0 3h4z'/%3E%3C/svg%3E) no-repeat right .75rem center;
+        background-size: 8px 10px;
+        border: 1px solid #ced4da;
+        border-radius: .25rem;
+        -webkit-appearance: none;
+        -moz-appearance: none;
+        appearance: none;
+    }
